--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,13 +2,15 @@
 galaxy_info:
   role_name: wireguard
   author: Tomoyuki Sakurai
-  description: Configures something
+  description: Configures wireguard
   company: N/A
   license: BSD
   min_ansible_version: 2.0
   platforms:
-    - name: FreeBSD
+    - name: OpenBSD
       versions:
-        - 12.0
+        - 6.8
+        - 6.9
   galaxy_tags:
-    - system
+    - vpn
+    - wireguard
